--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -4,22 +4,16 @@ childlogdir=/var/log/supervisor
 
 [supervisorctl]
 
-# Make a framebuffer for civ 5 to render to
-[program:xvfb]
-command=/usr/bin/Xvfb :99 -screen 0 1920x1080x24 -dpi 96
-autorestart=true
-priority=100
-
 # Start a VNC server so we can remote in
-[program:x11vnc]
-command=/usr/bin/x11vnc -xkb -noxrecord -noxfixes -noxdamage -display :99 -nopw -shared -forever
-autorestart=true
+[program:vncserver]
+command=vncserver -desktop "Xtigervnc" -geometry 1920x1080 -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :99
+autorestart=false
 priority=200
 
 [program:openbox]
 command=openbox
 autorestart=true
-priority=300
+priority=400
 
 # [program:glxgears]
 # command=glxgears -info
@@ -33,7 +27,7 @@ directory=/root/civ5game
 command=sh -c "strangle 2 wine CivilizationV_Server.exe"
 startsecs=10
 autorestart=true
-priority=500
+priority=600
 
 # Civ 5 server needs somewhere to pipe audio to...
 [program:pulseaudio]
@@ -43,11 +37,14 @@ startsecs=0
 priority=200
 
 # The steam client
+#   The "-overridepackageurl http://cdn.steamstatic.com/client" option can be specified if steam is having a hard time updating over https
+#   The "-nobrowser" option has been removed"
 # (it may be installed in Program Files, or Program Files (x86))
 [program:steam]
-command=bash -c "sleep 5 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-browser +open steam://open/minigameslist"
+command=bash -c "sleep 5 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-cef-sandbox -cef-disable-gpu -cef-disable-breakpad -nocrashmonitor"
+exitcodes=0,42
 autorestart=false
-priority=200
+priority=300
 
 [program:smtp_honeypot]
 command=python3 /usr/lib/smtp_honeytrap/smtp_server.py
@@ -55,16 +52,6 @@ autorestart=true
 priority=300
 
 [program:tx_player_turns]
-command=/usr/lib/tx_player_turns/tx_player_turns.bash
-autorestart=true
-priority=300
-
-[program:s3_backup]
-command=/usr/lib/saves_backup/s3_backup.bash
-autorestart=true
-priority=300
-
-[program:tx_players_connected]
-command=/usr/lib/tx_players_connected/tx_players_connected.bash
+command=bash /usr/lib/tx_player_turns/tx_player_turns.bash
 autorestart=true
 priority=300
