Removing smtp_honeypot in favor of nfty notifications

--- a/civ5save/UserSettings.ini
+++ b/civ5save/UserSettings.ini
@@ -1,148 +1,102 @@
 [AutoSave]
 
-; Specify the number of turns between autoSaves.  0 means no autosave.
 TurnsBetweenAutosave = 1
 
-; The maximum number of autosaves kept in the directory before being deleted.
 NumAutosavesKept = 50
 
 [GameSettings]
 
-; Disables automated workers from replacing existing improvements.
 AutoWorkersDontReplace = 0
 
-; Automated workers will not remove an improvement unless to construct a luxury or strategic improvement
 AutoWorkersDontRemoveFeatures = 0
 
-; Disables warning in City Screen about citizen reallocation.
 NoCitizenWarning = 0
 
-; Disables reward popups (Techs, Wonders, etc.)
 NoRewardPopups = 0
 
-; Disables on-map recommendations for Settlers and Workers.
 NoTileRecommendations = 0
 
-; Shows Yield icons when Settlers and Workers are selected.
 CivilianYields = 0
 
-; Disables basic help text explaining game concepts in a variety of tooltips.
 NoBasicHelp = 0
 
-; Camera zoom out type
 StraightZoom = 0
 
-; Grid Always On
 GridOn = 0
 
-; Show Trade Routes On
 ShowTradeOn = 0
 
-; Score List On
 ScoreList = 0
 
-; Multiplayer Score List On
 MPScoreList = 1
 
-; Resource Always On
 ResourceOn = 0
 
-; Yield Always On
 YieldOn = 0
 
-; Hide the touch interface help screen
 HideTouchHelp = 0
 
-; Show advanced information in the Policies Screen
 PolicyInfo = 0
 
-; Enable inertia when dragging the map
 EnableMapInertia = 1
 
-; Skip the intro video
 SkipIntroVideo = 1
 
-; Only create the terrain under the camera on game startup
 MinimalTerrainBuildOnLoad = 1
 
-; Accelerate map dragging
 DragSpeed = 1.000000
 
-; Accelerate pinch to zoom
 PinchSpeed = 1.000000
 
-; The number of seconds before map view tooltip level 1 appears.
 Tooltip1Seconds = 150
 
-; The number of seconds before map view tooltip level 2 appears.
 Tooltip2Seconds = 500
 
-; Activate developer debug mode. Only does boring stuff, sorry folks.
 DebugMode = 0
 
 ; Disables the advisor speech (GAME_ADVISOR_SPEECH volume knob)
 DisableAdvisorSpeech = 0
 
-; Automatically end the turn when there are no other available actions.
 SinglePlayerAutoEndTurnEnabled = 0
 
-; Automatically end the turn when there are no other available actions.
 MultiplayerAutoEndTurnEnabled = 0
 
-; Combats resolve without animation.
 SinglePlayerQuickCombatEnabled = 0
 
-; Movements resolve without animation.
 SinglePlayerQuickMovementEnabled = 0
 
-; Combats resolve without animation.
 MultiplayerQuickCombatEnabled = 1
 
-; Movements resolve without animation.
 MultiplayerQuickMovementEnabled = 0
 
-; Auto selection advance does not wait for animations.
 QuickSelectionAdvance = 0
 
-; Nick name to use during local network multiplayer games.
 LANNickName = 
 
-; Notify you with a Steam invite when it is your turn in a Pitboss game.
 TurnNotifySteamInvite = 0
 
-; Notify you with a email when it is your turn in a Pitboss game.
-TurnNotifyEmail = 0
+TurnNotifyEmail = 1
 
-; Turn notification email address
-TurnNotifyEmailAddress = 
+TurnNotifyEmailAddress = rcpt@domain.net
 
-; Turn notification smtp email address
-TurnNotifySmtpEmailAddress = rcpt@domain.com
+TurnNotifySmtpEmailAddress = mailfrom@example.net
 
-; Turn notification smtp server address
 TurnNotifySmtpHost = 127.0.0.1
 
-; Turn notification smtp server port
 TurnNotifySmtpPort = 1025
 
-; Turn notification smtp server username
 TurnNotifySmtpUsername = user
 
-; Turn notification smtp server TLS encryption
 TurnNotifySmtpTLS = 0
 
-; Binds the mouse to the game window 0=never 1=fullscreen only 2=always
 BindMouse = 0
 
 [InterfaceSettings]
 
-; Use UI assets intended for smaller resolutions
 SmallUIAssets = 1
 
-; Automatically determine which UI assets to use based on resolution
 AutoUIAssets = 1
 
-; Automatically cycle to the next unit
 AutoUnitCycle = 1
 
 [TutorialSettings]
@@ -150,13 +104,10 @@ AutoUnitCycle = 1
 ; Level of Advisor feedback
 TutorialLevel = 0
 
-; Level of Advisor feedback
 AdvisorLevel = 0
 
-; Advisor interrupts player if they're about to make a bad attack
 AdvisorBadAttackInterrupt = 1
 
-; Advisor interrupts player if they're about to attack a city
 AdvisorCityAttackInterrupt = 1
 
 [User Settings]
