Adding weekly cron job to notify players whose turn it is, removed email notifications for UserSettings.ini, added CIV_DATA_ROOT env variable

--- a/civ5save/UserSettings.ini
+++ b/civ5save/UserSettings.ini
@@ -75,17 +75,17 @@ LANNickName =
 
 TurnNotifySteamInvite = 0
 
-TurnNotifyEmail = 1
+TurnNotifyEmail = 0
 
-TurnNotifyEmailAddress = rcpt@domain.net
+TurnNotifyEmailAddress = 
 
-TurnNotifySmtpEmailAddress = mailfrom@example.net
+TurnNotifySmtpEmailAddress = 
 
-TurnNotifySmtpHost = 127.0.0.1
+TurnNotifySmtpHost = 
 
-TurnNotifySmtpPort = 1025
+TurnNotifySmtpPort = 
 
-TurnNotifySmtpUsername = user
+TurnNotifySmtpUsername = 
 
 TurnNotifySmtpTLS = 0
 
