--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -4,15 +4,49 @@ childlogdir=/var/log/supervisor
 
 [supervisorctl]
 
-# Start a VNC server so we can remote in
-[program:vncserver]
-command=vncserver -desktop "Xtigervnc" -geometry 1920x1080 -listen tcp -ac -SecurityTypes None -AlwaysShared -AcceptKeyEvents -AcceptPointerEvents -SendCutText -AcceptCutText :99
+# Sleep statements are necessary because Xvfb
+# is starting to quickly and crashing.
+[program:xvfb]
+command=bash -c "sleep 5 && /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -dpi 96"
+startsecs=10
+autorestart=true
+priority=100
+
+[program:pulseaudio]
+command=pulseaudio --start
 autorestart=false
+startsecs=0
+priority=100
+
+[program:tx_player_turns]
+command=bash /usr/lib/tx_player_turns/tx_player_turns.bash
+autorestart=true
+priority=100
+
+# Start a VNC server so we can remote in
+# By default the DISPLAY variable is used
+# to specify the display x0vncserver will
+# run on.
+[program:vncserver]
+command=bash -c "sleep 10 && x0vncserver -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
+startsecs=15
+autorestart=true
 priority=200
 
 [program:openbox]
-command=openbox
+command=bash -c "sleep 10 && openbox"
+startsecs=15
 autorestart=true
+priority=300
+
+# The steam client
+#   The "-overridepackageurl http://cdn.steamstatic.com/client" option can be specified if steam is having a hard time updating over https
+#   The "-nobrowser" option has been removed"
+# (it may be installed in Program Files, or Program Files (x86))
+[program:steam]
+command=bash -c "sleep 10 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-cef-sandbox -cef-disable-gpu -cef-disable-breakpad -nocrashmonitor"
+exitcodes=0,42
+autorestart=false
 priority=400
 
 # [program:glxgears]
@@ -24,29 +58,7 @@ priority=400
 # (force it to run at 2 FPS, as software rendering is taxing on the CPU)
 [program:civ5server]
 directory=/root/civ5game
-command=sh -c "strangle 2 wine CivilizationV_Server.exe"
-startsecs=10
+command=bash -c "sleep 10 && strangle 2 wine CivilizationV_Server.exe"
+startsecs=15
 autorestart=true
 priority=600
-
-# Civ 5 server needs somewhere to pipe audio to...
-[program:pulseaudio]
-command=pulseaudio --start
-autorestart=false
-startsecs=0
-priority=200
-
-# The steam client
-#   The "-overridepackageurl http://cdn.steamstatic.com/client" option can be specified if steam is having a hard time updating over https
-#   The "-nobrowser" option has been removed"
-# (it may be installed in Program Files, or Program Files (x86))
-[program:steam]
-command=bash -c "sleep 5 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-cef-sandbox -cef-disable-gpu -cef-disable-breakpad -nocrashmonitor"
-exitcodes=0,42
-autorestart=false
-priority=300
-
-[program:tx_player_turns]
-command=bash /usr/lib/tx_player_turns/tx_player_turns.bash
-autorestart=true
-priority=300
