--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -5,7 +5,7 @@ childlogdir=/var/log/supervisor
 [supervisorctl]
 
 # Sleep statements are necessary because Xvfb
-# is starting to quickly and crashing.
+# is starting too quickly and crashing.
 [program:xvfb]
 command=bash -c "sleep 5 && /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -dpi 96"
 startsecs=10
