Setting up a dedicated cron process for the weekly cron job (so it will hopefully work now), updated echo statements in scripts to printf to reduce the number of commands, improved formatting of tx_player_turns.bash so redundant tasks aren't executed and added functions for code-reuse, cleaned up Dockerfile so rpms are all installed at the start

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -5,23 +5,28 @@ ARG NTFY_TOPIC=""
 # Update all packages
 RUN dnf -y update
 
+# cronie - Weekly notifications of player turn status
 # gcc-c++ - Required to compile libstrangle
 # glibc-devel - Required to compile libstrangle
+# inotify-tools - Track changes to sqlite dbs for turn status notifications
 # libstdc++-devel - Required to compile libstrangle
 # mesa-libGL - OpenGL software renderer
 # mesa-libOSMesa - Mesa offscreen rendering libraries (hosting a game crashes without this)
 # openbox - Super-lightweight window manager
 # pulseaudio, pulseaudio-libs.i686 - Civ 5 needs somewhere to output audio
 # pipewire-alsa - Wine complains about lib alsa missing, so included just in case
+# sqlite - Query sqlite dbs for player turn status
 # supervisor - Run and monitor processes
 # wine - Wine native rpm
 # winetricks - Allows us to install windows steam "natively"
 # tigervnc-server - VNC server to connect to the virtual display
 # xorg-x11-server-Xvfb - In-memory display server
 RUN dnf -y install \
+    cronie \
     gcc-c++ \
     glibc-devel \
     glibc-devel.i686 \
+    inotify-tools \
     libstdc++-devel \
     libstdc++-devel.i686 \
     mesa-libGL \
@@ -36,6 +41,7 @@ RUN dnf -y install \
     pulseaudio-libs.i686 \
     pipewire-alsa \
     pipewire-alsa.i686 \
+    sqlite \
     supervisor \
     tigervnc-server \
     wine \
@@ -44,6 +50,11 @@ RUN dnf -y install \
 
 # Needed to compile libstrangle
 RUN dnf -y group install development-tools
+
+# For testing software rendering
+# RUN dnf -y install glx-utils
+
+RUN dnf clean all -y
 
 # Force software rendering, and also set $DISPLAY while we're here
 ENV LIBGL_ALWAYS_SOFTWARE=1 MESA_LOADER_DRIVER_OVERRIDE=llvmpipe GALLIUM_DRIVER=llvmpipe DISPLAY=:99 CIV_DATA_ROOT="/root/.wine/drive_c/users/root/Documents/My Games/Sid Meier's Civilization 5" NTFY_TOPIC=$NTFY_TOPIC
@@ -66,11 +77,17 @@ RUN patch /libstrangle/src/vulkan/overlay.cpp < /libstrangle/overlay_patch.patch
 RUN rm -rf /libstrangle
 
 # Install telemetry system to notify players who haven't taken their turn using nfty.sh
-RUN dnf install -y inotify-tools sqlite crontabs
 COPY ./tx_player_turns.bash /usr/local/bin/
-COPY ./scheduled_turn_notifications.bash /etc/cron.weekly/
+RUN chmod +x /usr/local/bin/tx_player_turns.bash
 COPY ./json_file_helper.py /usr/local/bin/
-RUN chmod +x /etc/cron.weekly/scheduled_turn_notifications.bash
+RUN chmod +x /usr/local/bin/json_file_helper.py
+
+# Add cron job to notify participants those players whose turns are outstanding using ntfy.sh
+COPY ./scheduled_turn_notifications.bash /usr/local/bin/
+RUN chmod +x /usr/local/bin/scheduled_turn_notifications.bash
+COPY ./weekly_cron_job /tmp/
+RUN crontab -u root /tmp/weekly_cron_job
+RUN rm --force /tmp/weekly_cron_job
 
 # Add our list-of-stuff-to-execute
 COPY ./supervisord.conf /etc/supervisord.conf
@@ -78,11 +95,6 @@ COPY ./supervisord.conf /etc/supervisord.conf
 # Deploy a debug script to query the dbs
 COPY ./debug_script.bash /usr/local/bin/
 RUN chmod +x /usr/local/bin/debug_script.bash
-
-# For testing software rendering
-# RUN dnf -y install glx-utils
-
-RUN dnf clean all -y
 
 # Start the supervisor service to manage processes
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisord.conf"]
