--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -62,3 +62,9 @@ command=bash -c "sleep 10 && strangle 2 wine CivilizationV_Server.exe"
 startsecs=15
 autorestart=true
 priority=600
+
+[program:crond]
+command=crond -f
+startsecs=15
+autorestart=true
+priority=700
