Added custom repo support and fixed (maybe) cron jobs

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ civ5save/*
 !civ5save/README.md
 !civ5save/GraphicsSettingsDX9.ini
 !civ5save/UserSettings.ini
+*.repo
 
 # During Civ 5 installation, a `temp` dir is created
 temp
