Removed install.sh in favor of utilizing docker-compose, removed deprecated mesa-libOSMesa package with manual dxvk install, migrated discord and ntfy credentials to separate txt files that are mounted as secrets via docker-compose, moved environment variables into a env file, updated the build.sh script to generate the timezone value for the the env file; generate a default docker-compose.yml; and generate empty ntfy/discord credential txt files, fixed the fedora version to 42 because 43 isn't working yet, hopefully fixed the cron job for good this time (needed env variables to be sourced in the script), updated scripts to pull ntfy/discord credentials from mounted txt files, disabled errexit on ntfy/discord notifications because notification failures should be best effort, added a server_down_notifier.bash script that fires when the CivilizationV_Server.exe crashes

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ civ5save/*
 !civ5save/GraphicsSettingsDX9.ini
 !civ5save/UserSettings.ini
 *.repo
+discord_webhook_id.txt
+discord_webhook_token.txt
+ntfy_topic.txt
+docker-compose.yml
+civ5.env
 
 # During Civ 5 installation, a `temp` dir is created
 temp
