--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -7,8 +7,8 @@ childlogdir=/var/log/supervisor
 # Sleep statements are necessary because Xvfb
 # is starting too quickly and crashing.
 [program:xvfb]
-command=bash -c "sleep 5 && /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -dpi 96"
-startsecs=10
+command=bash -c "sleep 10 && /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -dpi 96"
+startsecs=15
 autorestart=true
 priority=100
 
@@ -20,6 +20,7 @@ priority=100
 
 [program:tx_player_turns]
 command=bash /usr/local/bin/tx_player_turns.bash
+startsecs=5
 autorestart=true
 priority=100
 
@@ -28,14 +29,14 @@ priority=100
 # to specify the display x0vncserver will
 # run on.
 [program:vncserver]
-command=bash -c "sleep 10 && x0vncserver -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
-startsecs=15
+command=bash -c "sleep 20 && x0vncserver -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
+startsecs=25
 autorestart=true
 priority=200
 
 [program:openbox]
-command=bash -c "sleep 10 && openbox"
-startsecs=15
+command=bash -c "sleep 20 && openbox"
+startsecs=25
 autorestart=true
 priority=300
 
@@ -43,8 +44,9 @@ priority=300
 #   The "-overridepackageurl http://cdn.steamstatic.com/client" option can be specified if steam is having a hard time updating over https
 #   The "-nobrowser" option has been removed"
 # (it may be installed in Program Files, or Program Files (x86))
+# https://developer.valvesoftware.com/wiki/Command_line_options_(Steam)
 [program:steam]
-command=bash -c "sleep 10 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-cef-sandbox -cef-disable-gpu -cef-disable-breakpad -nocrashmonitor"
+command=bash -c "sleep 30 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-cef-sandbox -cef-disable-gpu -cef-disable-breakpad -nocrashmonitor"
 exitcodes=0,42
 autorestart=false
 priority=400
@@ -58,13 +60,13 @@ priority=400
 # (force it to run at 2 FPS, as software rendering is taxing on the CPU)
 [program:civ5server]
 directory=/root/civ5game
-command=bash -c "sleep 10 && strangle 2 wine CivilizationV_Server.exe"
-startsecs=15
+command=bash -c "sleep 30 && WINEDEBUG=+warn,+loaddll strangle 2 wine CivilizationV_Server.exe; /usr/local/bin/server_down_notifier.bash"
+startsecs=35
 autorestart=true
 priority=600
 
 [program:crond]
 command=crond -f
-startsecs=15
+startsecs=5
 autorestart=true
 priority=700
