Add seh and timestamp WINEDEBUG options for civ5 exe

--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -60,7 +60,7 @@ priority=400
 # (force it to run at 2 FPS, as software rendering is taxing on the CPU)
 [program:civ5server]
 directory=/root/civ5game
-command=bash -c "sleep 30 && WINEDEBUG=+warn,+loaddll strangle 2 wine CivilizationV_Server.exe; /usr/local/bin/server_down_notifier.bash"
+command=bash -c "sleep 30 && WINEDEBUG=+seh,+warn,+loaddll,+timestamp strangle 2 wine CivilizationV_Server.exe; /usr/local/bin/server_down_notifier.bash"
 startsecs=35
 autorestart=true
 priority=600
