--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -7,7 +7,7 @@ childlogdir=/var/log/supervisor
 # Sleep statements are necessary because Xvfb
 # is starting too quickly and crashing.
 [program:xvfb]
-command=bash -c "sleep 10 && /usr/bin/Xvfb :99 -screen 0 1920x1080x24 -dpi 96"
+command=bash -c "sleep 10 && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
 startsecs=15
 autorestart=true
 priority=100
@@ -24,12 +24,18 @@ startsecs=5
 autorestart=true
 priority=100
 
+[program:crond]
+command=crond -f
+startsecs=5
+autorestart=true
+priority=100
+
 # Start a VNC server so we can remote in
 # By default the DISPLAY variable is used
 # to specify the display x0vncserver will
 # run on.
 [program:vncserver]
-command=bash -c "sleep 20 && x0vncserver -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
+command=bash -c "sleep 20 && x0vncserver -rfbport 5900 -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
 startsecs=25
 autorestart=true
 priority=200
@@ -38,35 +44,22 @@ priority=200
 command=bash -c "sleep 20 && openbox"
 startsecs=25
 autorestart=true
-priority=300
+priority=200
 
-# The steam client
-#   The "-overridepackageurl http://cdn.steamstatic.com/client" option can be specified if steam is having a hard time updating over https
-#   The "-nobrowser" option has been removed"
-# (it may be installed in Program Files, or Program Files (x86))
-# https://developer.valvesoftware.com/wiki/Command_line_options_(Steam)
-[program:steam]
-command=bash -c "sleep 30 && wineconsole /root/.wine/drive_c/Program\\ Files*/Steam/[s,S]team.exe -tcp -no-cef-sandbox -cef-disable-gpu -cef-disable-breakpad -nocrashmonitor"
-exitcodes=0,42
-autorestart=false
-priority=400
-
-# [program:glxgears]
-# command=glxgears -info
-# autorestart=true
-# priority=500
-
-# The civ 5 server itself
-# (force it to run at 2 FPS, as software rendering is taxing on the CPU)
+# The DXVK_FILTER_DEVICE_NAME env variable
+# forces llvmpipe (software rendering).
+# The DXVK_FRAME_RATE env variable restricts
+# the framerate at which civ5 runs.
+# By default the DISPLAY variable is used
+# to specify the display civ5 will run on.
+# The dlls specified in the STEAM_DLLS string
+# are copied into the root civ5game folder.
+# They must be present to host a game and are
+# a substitute for Steam running in the
+# background.
 [program:civ5server]
 directory=/root/civ5game
-command=bash -c "sleep 30 && WINEDEBUG=+seh,+warn,+loaddll,+timestamp strangle 2 wine CivilizationV_Server.exe; /usr/local/bin/server_down_notifier.bash"
+command=bash -c 'sleep 30 && STEAM_DLLS_ARRAY=(${STEAM_DLLS}) && for dll in "${STEAM_DLLS_ARRAY[@]}"; do \cp --force "/root/.wine/drive_c/Program Files (x86)/Steam/${dll}" ./; done && WINEDEBUG=+seh,+warn,+loaddll,+timestamp wine CivilizationV_Server.exe; /usr/local/bin/server_down_notifier.bash'
 startsecs=35
 autorestart=true
 priority=600
-
-[program:crond]
-command=crond -f
-startsecs=5
-autorestart=true
-priority=700
