--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -7,7 +7,7 @@ childlogdir=/var/log/supervisor
 # Sleep statements are necessary because Xvfb
 # is starting too quickly and crashing.
 [program:xvfb]
-command=bash -c "sleep 10 && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
+command=bash -c "sleep 10 && rm --force /tmp/.X99-lock && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
 startsecs=15
 autorestart=true
 priority=100
@@ -40,6 +40,7 @@ startsecs=25
 autorestart=true
 priority=200
 
+# Openbox is our minimal desktop environment
 [program:openbox]
 command=bash -c "sleep 20 && openbox"
 startsecs=25
