--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -7,7 +7,7 @@ childlogdir=/var/log/supervisor
 # Sleep statements are necessary because Xvfb
 # is starting too quickly and crashing.
 [program:xvfb]
-command=bash -c "sleep 10 && rm --force /tmp/.X99-lock && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
+command=bash -c "sleep 10 && DISPLAY_NUMBER=$(echo ${DISPLAY} | cut --delimiter ':' --fields 2) && rm --force /tmp/.X${DISPLAY_NUMBER}-lock && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
 startsecs=15
 autorestart=true
 priority=100
@@ -25,7 +25,7 @@ autorestart=true
 priority=100
 
 [program:crond]
-command=crond -f
+command=bash -c "printenv > /root/civ5.env && crond -f"
 startsecs=5
 autorestart=true
 priority=100
@@ -60,7 +60,7 @@ priority=200
 # background.
 [program:civ5server]
 directory=/root/civ5game
-command=bash -c 'sleep 30 && STEAM_DLLS_ARRAY=(${STEAM_DLLS}) && for dll in "${STEAM_DLLS_ARRAY[@]}"; do \cp --force "/root/.wine/drive_c/Program Files (x86)/Steam/${dll}" ./; done && WINEDEBUG=+seh,+warn,+loaddll,+timestamp wine CivilizationV_Server.exe; /usr/local/bin/server_down_notifier.bash'
+command=bash -c '/usr/local/bin/run_civ.bash'
 startsecs=35
-autorestart=true
+autorestart=false
 priority=600
