Added missing VNC_PORT variable to x0vncserver command, renamed main function for consistency in tx_player_turns.bash

--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -35,7 +35,7 @@ priority=100
 # to specify the display x0vncserver will
 # run on.
 [program:vncserver]
-command=bash -c "sleep 20 && x0vncserver -rfbport 5900 -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
+command=bash -c "sleep 20 && x0vncserver -rfbport ${VNC_PORT} -SecurityTypes=None -AlwaysShared=on -AcceptCutText"
 startsecs=25
 autorestart=true
 priority=200
