--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -7,7 +7,7 @@ childlogdir=/var/log/supervisor
 # Sleep statements are necessary because Xvfb
 # is starting too quickly and crashing.
 [program:xvfb]
-command=bash -c "sleep 10 && DISPLAY_NUMBER=$(echo ${DISPLAY} | cut --delimiter ':' --fields 2) && rm --force /tmp/.X${DISPLAY_NUMBER}-lock && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
+command=bash -c "sleep 10 && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
 startsecs=15
 autorestart=true
 priority=100
@@ -25,7 +25,7 @@ autorestart=true
 priority=100
 
 [program:crond]
-command=bash -c "printenv > /root/civ5.env && crond -f"
+command=bash -c "export -p > /root/civ5.env && crond -f"
 startsecs=5
 autorestart=true
 priority=100
@@ -62,5 +62,5 @@ priority=200
 directory=/root/civ5game
 command=bash -c '/usr/local/bin/run_civ.bash'
 startsecs=35
-autorestart=false
+autorestart=true
 priority=600
