--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -6,8 +6,8 @@ childlogdir=/var/log/supervisor
 
 # Sleep statements are necessary because Xvfb
 # is starting too quickly and crashing.
-[program:xvfb]
-command=bash -c "sleep 10 && /usr/bin/Xvfb ${DISPLAY} -screen 0 ${XVFB_RESOLUTION} -dpi 96"
+[program:xorg]
+command=bash -c "sleep 10 && /usr/bin/Xorg -dpms -novtswitch -nolisten tcp -noreset -ac +extension RANDR +extension RENDER +extension GLX +extension XVideo +extension DOUBLE-BUFFER +extension SECURITY +extension DAMAGE +extension X-Resource +extension XINERAMA -xinerama +extension COMPOSITE -logfile /var/log/xorg.log -config /etc/X11/xorg.conf.d/xorg.conf.dummy vt7 ${DISPLAY}"
 startsecs=15
 autorestart=true
 priority=100
@@ -25,7 +25,7 @@ autorestart=true
 priority=100
 
 [program:crond]
-command=bash -c "export -p > /root/civ5.env && crond -f"
+command=bash -c "export -p > /home/${CONTAINER_USERNAME}/civ5.env && crond -f"
 startsecs=5
 autorestart=true
 priority=100
@@ -48,18 +48,17 @@ autorestart=true
 priority=200
 
 # The DXVK_FILTER_DEVICE_NAME env variable
-# forces llvmpipe (software rendering).
+# may be used to force llvmpipe (software rendering).
 # The DXVK_FRAME_RATE env variable restricts
 # the framerate at which civ5 runs.
 # By default the DISPLAY variable is used
 # to specify the display civ5 will run on.
 # The dlls specified in the STEAM_DLLS string
-# are copied into the root civ5game folder.
+# are copied into the civ5game folder.
 # They must be present to host a game and are
 # a substitute for Steam running in the
 # background.
 [program:civ5server]
-directory=/root/civ5game
 command=bash -c '/usr/local/bin/run_civ.bash'
 startsecs=35
 autorestart=true
